bk_ida/gccida/c2/gen_split_958
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_958/src/insn-emit.c:8750:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_958/src/insn-emit.c:8759:30: error: use of undeclared identifier 'machine_mode'
operands[1] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_958/src/insn-emit.c:8760:30: error: use of undeclared identifier 'machine_mode'
operands[3] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[3]); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_958/src/insn-emit.c:8761:30: error: use of undeclared identifier 'machine_mode'
operands[4] = gen_lowpart( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), operands[4]); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_split_958/src/obj/insn-emit.o] Error 1
